2009-03-28  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
	    Akim Demaille  <akim@lrde.epita.fr>

	parallel-tests: redo lazy checking: recheck and RECHECK_LOGS.
	Replace the LAZY_TEST_SUITE API with a simpler yet more powerful
	one: RECHECK_LOGS specifies those tests which are to be removed
	in any case before testing.  Provide a `recheck' convenience
	target to set RECHECK_LOGS to all failed and unexpectedly passed
	tests.  Document several ways to limit the set of tests run.
	* lib/am/check.am [PARALLEL_TESTS] (RECHECK_LOGS): New variable,
	default to $(TESTS_LOGS).
	(check-TESTS): Remove $(RECHECK_LOGS) not $(TEST_LOGS).  Drop use
	of LAZY_TEST_SUITE.
	($(TEST_SUITE_LOG)): Do not output note about lazy rerun, as
	LAZY_TEST_SUITE is gone.
	(recheck): New target.
	(recheck-am, recheck-TESTS): New internal targets.
	* doc/automake.texi (Tests): Update @vindex for TESTS and
	TEST_LOGS.  Replace description of LAZY_TEST_SUITE with a list
	of ways the set of tests to be run can be modified.  Document
	RECHECK_LOGS and the recheck target.
	* tests/defs.in: Unset RECHECK_LOGS not LAZY_TEST_SUITE.
	* tests/parallel-tests.test: Adjust, replacing LAZY_TEST_SUITE
	with corresponding RECHECK_LOGS settings.
	* tests/parallel-tests9.test: New tests.
	* tests/Makefile.am: Update.
	Suggestion and different implementation by Akim Demaille.

	parallel-tests: do not mark check-TESTS as `.MAKE'.
	* lib/am/check.am [PARALLEL_TESTS] (.MAKE): Remove check-TESTS.
	This rule removes files, which should not be executed with BSD
	`make -n'.

	parallel-tests: warn about $(srcdir), $(top_srcdir) in TESTS.
	* automake.in (handle_tests): Warn about portability issue
	concerning generated TESTS files listed with a `$(srcdir)/'
	or `$(top_srcdir)/' prefix.
	* doc/automake.texi (TESTS): Document this issue.  Mention that
	the parallel-tests driver is still experimental.
	* tests/parallel-tests8.test: New test.
	* tests/Makefile.am: Update.
