@@ -8510,10 +8510,13 @@ env RECHECK_LOGS= make -e check
 
 @item
 @trindex recheck
+@trindex recheck-html
 You can ensure that all tests are rerun which have failed or passed
 unexpectedly, by running @code{make recheck} in the test directory.
 This convenience target will set @code{RECHECK_LOGS} appropriately
-before invoking the main test driver.
+before invoking the main test driver.  The @code{recheck-html} target
+does the same as @code{recheck} but again converts the resulting log
+file in HTML format, like the @code{check-html} target.
 @end itemize
 
 In order to guarantee an ordering between tests even with @code{make
