@@ -275,14 +275,15 @@ recheck: recheck-am
 
 # Be sure to run check-TESTS first, and then to convert the result.
 # Beware of concurrent executions.  And expect check-TESTS to fail.
-check-html:
-	@if $(MAKE) $(AM_MAKEFLAGS) check-TESTS; then		\
+check-html recheck-html:
+	@target=`echo $@ | sed 's/-html$$//'`;			\
+	if $(MAKE) $(AM_MAKEFLAGS) $$target-TESTS; then		\
 	  rv=0; else rv=$$?;					\
 	fi;							\
 	$(MAKE) $(AM_MAKEFLAGS) $(TEST_SUITE_HTML) || exit 4;	\
 	exit $$rv
-.PHONY: check-html
-.MAKE: check-html
+.PHONY: check-html recheck-html
+.MAKE: check-html recheck-html
 
 else !%?PARALLEL_TESTS%
 
