@@ -16,6 +16,7 @@
 
 # Check parallel-tests features:
 # - check-html
+# - recheck-html
 
 required=rst2html
 . ./defs-p || Exit 1
@@ -63,4 +64,9 @@ env TESTS=foo.test $MAKE -e check-html >stdout || { cat stdout; Exit 1; }
 cat stdout
 test -f mylog.html
 
+# Create HTML output also with recheck-html
+rm -f mylog.html
+env TESTS=foo.test $MAKE -e recheck-html >stdout || { cat stdout; Exit 1; }
+cat stdout
+test -f mylog.html
 :
