@@ -1,3 +1,13 @@
+2009-03-29  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+	    Akim Demaille  <akim@lrde.epita.fr>
+
+	parallel-tests: New target recheck-html.
+	* lib/am/check.am [PARALLEL_TESTS] (recheck-html): New phony,
+	recursive target.  Factor common implementation with
+	`check-html'.
+	* doc/automake.texi (Tests): Document recheck-html.
+	* tests/parallel-tests2.test: Test it.
+
 2009-03-28  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 	    Akim Demaille  <akim@lrde.epita.fr>
 
